todo_app/manifests/namespace-todoapp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todoapp-namespace
  labels:
    name: todoapp-namespace
