todo_app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  namespace: todoapp-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      volumes:
        - name: todoapp
          persistentVolumeClaim:
            claimName: todo-claim
      containers:
        - name: todoapp-back
          image: ajhaa/kube_todoapp_back
          volumeMounts: # Mount volume
          - name: todoapp
            mountPath: /app/shared/
        - name: todoapp-front
          image: ajhaa/kube_todoapp_front
