todo_app/manifests/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: todo-postgres-set
  namespace: todoapp-namespace
spec:
  serviceName: todo-postgres
  replicas: 1
  selector:
    matchLabels:
      app: todo-postgres
  template:
    metadata:
      labels:
        app: todo-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:12
          ports:
            - name: todo-db
              containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
