todo_app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-svc
  namespace: todoapp-namespace
spec:
  type: ClusterIP
  selector:
    app: todoapp
  ports:
    - port: 2345
      name: back
      protocol: TCP
      targetPort: 3000
    - port: 2346
      name: front
      protocol: TCP
      targetPort: 5000
