todo_app/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todoapp-ingress
  namespace: todoapp-namespace
spec:
  rules:
  - http:
      paths:
      - path: /api
        backend:
          serviceName: todoapp-svc
          servicePort: 2345
      - path: /
        backend:
          serviceName: todoapp-svc
          servicePort: 2346
